istio-basics/sample-apps/monitoring/monitoring-gw.yaml
---
# Install an istio gateway for exposing the monitoring UIs
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring
  namespace: istio-system
spec:
  selector:
    istio: monitoring-gateway
  servers:
  - port:
      number: 9090
      name: http-prom
      protocol: HTTP
    hosts:
    - '*'
  - port:
      number: 16686
      name: http-jaeger
      protocol: HTTP
    hosts:
    - '*'
  - port:
      number: 3000
      name: http-grafana
      protocol: HTTP
    hosts:
    - '*'
  - port:
      number: 20001
      name: http-kiali
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger-ui
  namespace: istio-system
spec:
  ports:
  - name: http-ui
    port: 16686
    protocol: TCP
    targetPort: 16686
  selector:
    app: jaeger
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
  namespace: istio-system
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/monitoring
  http:
  - match:
    - port: 9090
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
  - match:
    - port: 16686
    route:
    - destination:
        host: jaeger-ui
        port:
          number: 16686
  - match:
    - port: 3000
    route:
    - destination:
        host: grafana
        port:
          number: 3000
  - match:
    - port: 20001
    route:
    - destination:
        host: kiali
        port:
          number: 20001
